--- a/index.html
+++ b/index.html
@@ -1,14 +1,74 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Assignment 6</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="script/app.js"></script>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Phone Hunter API</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+</head>
+
+<body>
+  <!-- Header Section -->
+  <header class="container  my-5 ">
+    <h3 class="text-center py-3 bg-body-secondary">Phone Hunter API!</h3>
+  </header>
+  <!-- Main Sections -->
+  <main>
+    <section class="container mb-5">
+      <!-- Search Container -->
+      <div class="input-group mb-5">
+        <input id="search-input" type="text" class="form-control" placeholder="iPhone , Samsung">
+        <button id="btn-search" class="btn btn-primary" type="button">Search</button>
+      </div>
+      <!-- Phone Container -->
+      <div id="phones-container" class="row row-cols-1 row-cols-md-3 row-cols-lg-3 g-4">
+
+      </div>
+      <div id="not-found-message" class="mt-4 d-none">
+        <h3 class="text-warning">No phone found.Please try a new search!</h3>
+      </div>
+      <div id="load-more" class="text-center d-none mt-5">
+        <button id="btn-load-more" class="btn btn-primary">Load More</button>
+      </div>
+    </section>
+    <!-- Loader -->
+    <section id="loader" class="container d-none">
+      <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
+        <div class="spinner-border text-success" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+    </section>
+    <!-- Modal Phone -->
+    <section class="">
+
+
+      <!-- Modal -->
+      <div class="modal fade" id="phoneDeatailModal" tabindex="-1" aria-labelledby="phoneDeatailModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="phoneDeatailModalLabel"></h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div id="phone-details" class="modal-body">
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <script src="script/app.js"></script>
 </body>
+
 </html>
