--- a/index.html
+++ b/index.html
@@ -2,75 +2,85 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Assignment 6</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>AI Universe Hub</title>
+    <!-- Bootstarp CDN Link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- Font Awesome CDN Link -->
+    <script src="https://kit.fontawesome.com/a9b55c0e7f.js" crossorigin="anonymous"></script>
+    <!-- Custom CSS Link -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <!-- Header Section -->
-  <header class="container  my-5 ">
-    <h3 class="text-center py-3 bg-body-secondary">Phone Hunter API!</h3>
-  </header>
-  <!-- Main Sections -->
-  <main>
-    <section class="container mb-5">
-      <!-- Search Container -->
-      <div class="input-group mb-5">
-        <input id="search-input" type="text" class="form-control" placeholder="iPhone , Samsung">
-        <button id="btn-search" class="btn btn-primary" type="button">Search</button>
-      </div>
-      <!-- Phone Container -->
-      <div id="phones-container" class="row row-cols-1 row-cols-md-3 row-cols-lg-3 g-4">
-
-      </div>
-      <div id="not-found-message" class="mt-4 d-none">
-        <h3 class="text-warning">No phone found.Please try a new search!</h3>
-      </div>
-      <div id="load-more" class="text-center d-none mt-5">
-        <button id="btn-load-more" class="btn btn-primary">Load More</button>
-      </div>
-    </section>
-
-    <!-- Loader -->
-    <section id="loader" class="container d-none">
-      <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
-        <div class="spinner-border text-success" role="status">
-          <span class="visually-hidden">Loading...</span>
+    <!-- Header Section Start-->
+    <header class="container  my-3">
+        <h2 class="text-center py-4 fw-bold">AI Universe Hub</h2>
+        <div class="d-flex justify-content-center align-items-center">
+            <button id="sort-by-date" type="button" class="btn btn-danger btn-lg">Sort By Date</button>
         </div>
-      </div>
-    </section>
-  
-    <!-- Modal Phone -->
-    <section class="">
+    </header>
+    <!-- Header Section End-->
 
+    <!-- Main Sections Start -->
+    <main>
+        <!-- Spinner Section Start-->
+        <section id="loader" class="container ">
+            <div style="height: 400px;" class="d-flex justify-content-center align-items-center ">
+                <div class="spinner-border text-success" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
+        <!-- Spinner Section End-->
 
-      <!-- Modal -->
-      <div class="modal fade" id="phoneDeatailModal" tabindex="-1" aria-labelledby="phoneDeatailModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="phoneDeatailModalLabel"></h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <!-- Modal Section Start-->
+        <section class="container">
+            <!-- Modal Body-->
+            <div class="modal fade my-3" id="modalDetails" data-bs-backdrop="static" data-bs-keyboard="false"
+                tabindex="-1" aria-labelledby="modalDetailsLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header border-bottom-0 position-relative">
+                            <button type="button"
+                                class="btn-close bg-danger  rounded-circle position-absolute top-2 start-100 translate-middle"
+                                data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div id ="modalContainer" class="modal-body m-5 mt-0">
+                            <div class="container">
+                               <!-- Modal Deatails Goes Here -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div id="phone-details" class="modal-body">
+        </section>
+        <!-- Modal Section End-->
 
+        <!-- Main Data Section Start-->
+        <section class="container my-5">
+            <div id="data-container" class="row row-cols-1 row-cols-md-2 row-cols-lg-3  g-4">
+                <!-- Data will be loaded here -->
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+
+            <!-- Load More Button -->
+            <div id="show-all" class="d-flex py-5 justify-content-center align-items-center d-none">
+                <button id="btn-show-all" type="button" class="btn btn-danger btn-lg">Load More</button>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
-  <script src="script/app.js"></script>
+        </section>
+        <!-- Main Data Section End-->
+
+    </main>
+    <!-- Main Sections End -->
+
+    <!-- Bootstarp JS CDN Link  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <!-- Custom JS Link -->
+    <script src="script/app.js"></script>
 </body>
 
 </html>
